--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Test Header</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+  
+  <body></body>
+</html>
