--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/codswald/codswald.github.io/master/stylesheet.css"/>
+    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   </head>
   
   <body>
