--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   
   <body>
-    <h1 class"title">Test V3</h1>
+    <h1 class"title">Test V4</h1>
   </body>
 </html>
