--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-    <h1 class"title">Test V6</h1>
+    <h1 class="title">Test V7</h1>
     <p>Test Paragraph</p>
   </body>
 </html>
