--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   </head>
   
   <body>
-    <h1 class="title">Test V7</h1>
-    <p>Test Paragraph</p>
+    <h1 class="title">5e Random Character Gen</h1>
   </body>
 </html>
