--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
   
   <body>
     <h1 class="title">5e Random Character Gen</h1>
+    <div>
+      <label for="namePH">Name: </label>
+      <input type="text" name="namePH"></input>
+    </div>
   </body>
 </html>
