--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <h1 class="title">5e Random Character Gen</h1>
     <div>
       <label for="namePH">Name: </label>
-      <input type="text" name="namePH"></input>
+      <input type="text" name="namePH" placeholder="Name"></input>
+    </div>
+    <div>
+      <label for="GenderPH">Gender: </label>
+      <input type="text" name="GenderPH" placeholder="Gender"></input>
     </div>
   </body>
 </html>
